--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
             a:hover {
                 opacity: 0.3;
             }
+            .sketchfab-embed-wrapper {
+                margin-top:200px;
+            }
+
+            iframe {
+                width:100%;
+                height:400px;
+            }
         </style>
     </head>
     <body>
