--- a/index.html
+++ b/index.html
@@ -127,9 +127,8 @@ div.desc {
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="images/open-graph.jpg">
-    <img src="images/open-graph.jpg" alt="Forest" width="600" height="400">
-  </a>
+   <div class="sketchfab-embed-wrapper"> <iframe title="Summer vibe" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/d5dba1beb9e746fbb2ba6a3b7ed62576/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a href="https://sketchfab.com/3d-models/summer-vibe-d5dba1beb9e746fbb2ba6a3b7ed62576?utm_medium=embed&utm_campaign=share-popup&utm_content=d5dba1beb9e746fbb2ba6a3b7ed62576" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Summer vibe </a> by <a href="https://sketchfab.com/lada003?utm_medium=embed&utm_campaign=share-popup&utm_content=d5dba1beb9e746fbb2ba6a3b7ed62576" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> lada003 </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=d5dba1beb9e746fbb2ba6a3b7ed62576" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p></div>
+
   <div class="desc">Add a description of the image here</div>
 </div>
 
