--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ div.desc {
   <a target="_blank" href="images/open-graph.jpg">
     <img src="images/open-graph.jpg" alt="Cinque Terre" width="600" height="400">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Description added here k</div>
 </div>
 
 <div class="gallery">
