--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <style>
             @font-face {
-                font-family: IBM Plex Sans;
+                font-family: Verdana;
                 src:
                     local("IBM Plex Sans"),
                     url(fonts/IBMPlexSans-Regular-Subset.woff2) format("woff2");
