--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             body {
                 margin: 0;
                 line-height: 1.4;
-                font-family: "IBM Plex Sans", sans-serif;
+                font-family: "Verdana", sans-serif;
                 font-size: clamp(1rem, 0.8214rem + 0.5714vw, 1.25rem);
                 color: #111;
                 text-rendering: optimizeLegibility;
